# datavis-gtd

./: .gitignore  data_cleaning.ipynb  eda.ipynb  eda.py  hello.py  pyproject.toml
homework3/: homework3.ipynb  terrorism-group-bar.html  terrorism-map.html
homework4/: Homework 4.docx  Homework 4.twbx  homework4.pbix
terr/: Bar.html  chart.html  chart2.html  terrorism-map.html
